# mcp-kit

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
filesystem/.continue/mcpServers/: mcp.json
nodejs-wrapper/: .gitignore  .npmignore  README.md  index.js  package.json
nodejs-wrapper/scripts/: install.js
nodejs-wrapper/test/: test.js
scripts/bash/: create-mcp.sh
scripts/powershell/: create-mcp.ps1
src/mcp_cli/: __init__.py  __main__.py
templates/: base_mcp.json
