[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-gearbox"
version = "0.0.11"
description = "A command-line interface tool for MCP server management and project initialization"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Rohit Soni" }]
maintainers = [{ name = "Rohit Soni" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "cli",
    "project-initialization",
    "ai-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "platformdirs>=3.0.0",
    "readchar>=4.0.0",
    "truststore>=0.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.urls]
Homepage = "https://github.com/rohitsoni007/mcp-kit"
Repository = "https://github.com/rohitsoni007/mcp-kit"
Issues = "https://github.com/rohitsoni007/mcp-kit/issues"
Documentation = "https://github.com/rohitsoni007/mcp-kit#readme"
Changelog = "https://github.com/rohitsoni007/mcp-kit/blob/main/CHANGELOG.md"


[project.scripts]
mcp-cli = "mcp_cli:main"
mcp = "mcp_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=src --cov-report=term-missing"
